--- a/Views/Usuario/IndexAdmi.cshtml
+++ b/Views/Usuario/IndexAdmi.cshtml
@@ -1,35 +1,60 @@
 @model TesisPadel.Models.Usuario;
 @{
-    ViewData["Title"] ="Jugadores";
+    ViewData["Title"] = "Jugadores";
 }
 <div class="modal fade" id="ModalUsuario" tabindex="1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header fondom">
-                    <h5 class="modal-title letra " id="exampleModalLabel">Agregar Club</h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                </div>
-                <form id="files" method="post" enctype="multipart/form-data">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header fondom">
+                <h5 class="modal-title letra " id="exampleModalLabel">Jugadores</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <form id="files" method="post" enctype="multipart/form-data">
                 <div class="modal-body fondom">
-                    <input name="UsuarioId" type="hidden" id="ClubId" value="0" class="letra">
+                    
+                    <input name="UsuarioId" type="hidden" id="usuarioId" value="0" class="letra">
                     <div class="control-label">
                         <p class="letra">Nombre</p>
                         <input name="Nombre" type="text" class="form-control fondoi" id="Nombre" autocomplete="off">
                         <span asp-validation-for="Nombre" class="text-danger"></span>
                         <p class="letra">Localidad</p>
-                        <input name="Localidad" type="text" class="form-control fondoi" id="Localidad" autocomplete="off">
+                        <input name="Localidad" type="text" class="form-control fondoi" id="Localidad"
+                            autocomplete="off">
                         <span asp-validation-for="Localidad" class="text-danger"></span>
+                        <p class="letra">Telefono</p>
+                        <input name="Telefono" type="text" class="form-control fondoi" id="Telefono" autocomplete="off">
+                        <span asp-validation-for="Telefono" class="text-danger"></span>
+                        <p class="letra">DNI</p>
+                        <input name="DNI" type="text" class="form-control fondoi" id="DNI" autocomplete="off">
+                        <span asp-validation-for="DNI" class="text-danger"></span>
+                        <p>Club</p>
+                        @Html.DropDownList("ClubId", null, htmlAttributes: new { @class = "form-control fondoi" })
+                        <p>Genero</p>
+                        <select name="Genero" id="Genero" style="width : 100%; height: 100%;">
+                            <option value="0">Seleccione su genero</option>
+                            <option value="1"> Masculino</option>
+                            <option value="2">Femenino</option>
+                        </select>
+                        <p>Categoria</p>
+                        @Html.DropDownList("CategoriaId", null, htmlAttributes: new { @class = "form-control fondoi" })
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="button-8" role="button" data-bs-dismiss="modal">Cerrar</button>
-                        <button type="button" onclick="GuardarUsuario()" class="button-87" role="button">Guardar</button>
+                        <button type="button" onclick="GuardarUsuario()" class="button-87"
+                            role="button">Guardar</button>
                     </div>
                 </div>
-                </form>
-            </div>
+            </form>
         </div>
     </div>
+</div>
 <h1 class="display-4 titulo bajar" style="font-family: Verdana, Geneva, Tahoma, sans-serif;">Jugadores</h1>
+<div class="mb-2">
+    <button type="button" onclick="VaciarFormulario()" class="button-87" role="button" data-bs-toggle="modal"
+        data-bs-target="#ModalUsuario">
+        Nuevo
+    </button>
+</div>
 <div>
     <table class="table table-dark table-bordered table-striped">
         <thead>
@@ -47,6 +72,6 @@
         <tbody id="tbody-usuario"></tbody>
     </table>
 </div>
-@section Scripts{
+@section Scripts {
     <script src="~/js/usuario-1.0.0.js"></script>
 }
