--- a/Views/Usuario/IndexAdmi.cshtml
+++ b/Views/Usuario/IndexAdmi.cshtml
@@ -9,34 +9,41 @@
                 <h5 class="modal-title letra " id="exampleModalLabel">Jugadores</h5>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
-            <form id="files" method="post" enctype="multipart/form-data">
                 <div class="modal-body fondom">
-                    
-                    <input name="UsuarioId" type="hidden" id="usuarioId" value="0" class="letra">
+                    <input name="UsuarioId" type="hidden" id="UsuarioId" value="0" >
                     <div class="control-label">
-                        <p class="letra">Nombre</p>
-                        <input name="Nombre" type="text" class="form-control fondoi" id="Nombre" autocomplete="off">
-                        <span asp-validation-for="Nombre" class="text-danger"></span>
-                        <p class="letra">Localidad</p>
-                        <input name="Localidad" type="text" class="form-control fondoi" id="Localidad"
-                            autocomplete="off">
-                        <span asp-validation-for="Localidad" class="text-danger"></span>
-                        <p class="letra">Telefono</p>
-                        <input name="Telefono" type="text" class="form-control fondoi" id="Telefono" autocomplete="off">
-                        <span asp-validation-for="Telefono" class="text-danger"></span>
-                        <p class="letra">DNI</p>
-                        <input name="DNI" type="text" class="form-control fondoi" id="DNI" autocomplete="off">
-                        <span asp-validation-for="DNI" class="text-danger"></span>
-                        <p>Club</p>
-                        @Html.DropDownList("ClubId", null, htmlAttributes: new { @class = "form-control fondoi" })
-                        <p>Genero</p>
-                        <select name="Genero" id="Genero" style="width : 100%; height: 100%;">
-                            <option value="0">Seleccione su genero</option>
-                            <option value="1"> Masculino</option>
-                            <option value="2">Femenino</option>
-                        </select>
-                        <p>Categoria</p>
-                        @Html.DropDownList("CategoriaId", null, htmlAttributes: new { @class = "form-control fondoi" })
+                        <div class="row">
+                            <div class="col-md-6">
+                                <p class="letra">Nombre</p>
+                                <input name="Nombre" type="text" class="form-control fondoi" id="Nombre" autocomplete="off">
+                                <span asp-validation-for="Nombre" class="text-danger"></span>
+                                <p class="letra">Localidad</p>
+                                <input name="Localidad" type="text" class="form-control fondoi" id="Localidad"
+                                autocomplete="off">
+                                <span asp-validation-for="Localidad" class="text-danger"></span>
+                                <p class="letra">Telefono</p>
+                                <input name="Telefono" type="text" class="form-control fondoi" id="Telefono" autocomplete="off">
+                                <span asp-validation-for="Telefono" class="text-danger"></span>
+                            </div>
+                            <div class="col-md-6">
+                                <p class="letra">DNI</p>
+                                <input name="DNI" type="text" class="form-control fondoi" id="DNI" autocomplete="off">
+                                <span asp-validation-for="DNI" class="text-danger"></span>
+                                <p>Club</p>
+                                @Html.DropDownList("ClubId", null, htmlAttributes: new { @class = "form-control fondoi" })
+                                <p>Genero</p>
+                                <select name="Genero" id="Genero" style="width : 100%; height: 20%;">
+                                    <option value="0">Seleccione su genero</option>
+                                    <option value="1"> Masculino</option>
+                                    <option value="2">Femenino</option>
+                                </select>
+                            </div>
+                            <div class="col-md-12">
+                                <p>Categoria</p>
+                                @Html.DropDownList("CategoriaId", null, htmlAttributes: new { @class = "form-control fondoi" })
+                            </div>
+                        </div>
+                        
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="button-8" role="button" data-bs-dismiss="modal">Cerrar</button>
@@ -44,7 +51,6 @@
                             role="button">Guardar</button>
                     </div>
                 </div>
-            </form>
         </div>
     </div>
 </div>
@@ -73,5 +79,5 @@
     </table>
 </div>
 @section Scripts {
-    <script src="~/js/usuario-1.0.0.js"></script>
+    <script src="~/js/usuarioA-1.0.0.js"></script>
 }
