--- a/Views/Ranking/Index.cshtml
+++ b/Views/Ranking/Index.cshtml
@@ -44,15 +44,15 @@
 
 <div>
     <div class="mb-2">
-        <a class="button-87" style="width: 18%;" role="button" href="/Ranking/IndexF">Ranking
+        <a class="button-87" style="width: 40%;" role="button" href="/Ranking/IndexF">Ranking
         Femenino</a>
         <button type="button" onclick="VaciarFormulario()" class="button-87" role="button" data-bs-toggle="modal"
             data-bs-target="#ModalRanking">
             Actualizar
         </button>
-         <button type="button" onclick="EliminarRanking()" class="button-82" style="width: 17%; weight:20%"  role="button"  data-bs-target="#ModalRanking">
+         @* <button type="button" onclick="EliminarRanking()" class="button-82" style="width: 17%; weight:20%"  role="button"  data-bs-target="#ModalRanking">
             Vaciar Puntos
-        </button>
+        </button> *@
     </div>
 
     <div id="div-categorias">
