--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -949,8 +949,8 @@ img {
 
 /* BOTONES */
 .button-87 {
-  margin: 10px;
-  padding: 12px 20px;
+  margin: 3px;
+  padding: 10px 10px;
   text-align: center;
   text-transform: uppercase;
   text-decoration: none;
@@ -1002,6 +1002,36 @@ img {
 }
 
 .button-82:hover {
+  background-position: right center;
+  /* change the direction of the change here */
+  color: #fff;
+  text-decoration: none;
+}
+
+.button-82:active {
+  transform: scale(0.95);
+}
+.button-83 {
+  margin: 3px;
+  padding: 10px 10px;
+  text-align: center;
+  text-transform: uppercase;
+  transition: 0.5s;
+  background-size: 200% auto;
+  color: white;
+  border-radius: 10px;
+  /* display: block; */
+  border: 0px;
+  font-weight: 700;
+  box-shadow: 0px 0px 14px -7px #f09819;
+  background-image: linear-gradient(45deg, #ff2f2f 0%, #F09819 51%, #ff2f2f 100%);
+  cursor: pointer;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+}
+
+.button-83:hover {
   background-position: right center;
   /* change the direction of the change here */
   color: #fff;
