--- a/Views/Ranking/Index.cshtml
+++ b/Views/Ranking/Index.cshtml
@@ -11,7 +11,7 @@
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body fondom">
-                <input name="RankingId" type="hidden" id="RankingId" value="0" class="letra">
+                <input name="RankingId" type="hidden" id="RankingId" value="0">
                 <div class="control-label">
                     <p class="letra">Jugador</p>
                     @Html.DropDownList("UsuarioId", null, htmlAttributes: new { @class = "form-control " })
