--- a/Views/Ranking/Index.cshtml
+++ b/Views/Ranking/Index.cshtml
@@ -44,20 +44,25 @@
 
 <div>
     <div class="mb-2">
-        <a class="button-87" style="width: 40%;" role="button" href="/Ranking/IndexF">Ranking
-        Femenino</a>
-        <button type="button" onclick="VaciarFormulario()" class="button-87" role="button" data-bs-toggle="modal"
-            data-bs-target="#ModalRanking">
-            Actualizar
-        </button>
-         @* <button type="button" onclick="EliminarRanking()" class="button-82" style="width: 17%; weight:20%"  role="button"  data-bs-target="#ModalRanking">
-            Vaciar Puntos
-        </button> *@
+        <div class="row ">
+            <div class="col-md-4">
+                <a class="button-84" style="width: 70% !important;" role="button" href="/Ranking/IndexF">Ranking
+                    Femenino</a>
+            </div>
+            <div class="col-md-6">
+                <button type="button" onclick="VaciarFormulario()" class="button-87" role="button"
+                    data-bs-toggle="modal" data-bs-target="#ModalRanking">
+                    Actualizar
+                </button>
+            </div>
+        </div>
     </div>
 
     <div id="div-categorias">
 
     </div>
+
+    <input type="hidden" value="1" id="GeneroBuscar" />
     @section Scripts {
         <script src="~/js/Ranking-1.0.0.js"></script>
     }
