--- a/Views/Ranking/IndexF.cshtml
+++ b/Views/Ranking/IndexF.cshtml
@@ -44,18 +44,27 @@
 
 <div>
     <div class="mb-2">
-        <a class="button-87" style="width: 19%;" role="button" href="/Ranking/Index">Ranking
-        Masculino</a>
-        <button type="button" onclick="VaciarFormulario()" class="button-87" role="button" data-bs-toggle="modal"
-            data-bs-target="#ModalRanking">
-            Actualizar
-        </button>
+        <div class="row">
+            <div class="col-md-4">
+                <a class="button-84" style="width: 70% !important;" role="button" href="/Ranking/Index">Ranking
+                    Masculino</a>
+            </div>
+            <div class="col-md-6">
+                <button type="button" onclick="VaciarFormulario()" class="button-87" role="button"
+                    data-bs-toggle="modal" data-bs-target="#ModalRanking">
+                    Actualizar
+                </button>
+            </div>
+        </div>
+
     </div>
 
     <div id="div-categorias">
 
     </div>
 
-    @section Scripts{
-    <script src="~/js/RankingF-1.0.0.js"></script>
+    <input type="hidden" value="2" id="GeneroBuscar" />
+
+    @section Scripts {
+        <script src="~/js/Ranking-1.0.0.js"></script>
     }
