--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -979,7 +979,38 @@ img {
 .button-87:active {
   transform: scale(0.95);
 }
+/*BOTON RANKING*/
+.button-84 {
+  margin: 5px;
+  padding: 10px 10px;
+  text-align: center;
+  text-transform: uppercase;
+  text-decoration: none;
+  transition: 0.5s;
+  background-size: 200% auto;
+  color: white;
+  border-radius: 10px;
+  display: block;
+  border: 0px;
+  font-weight: 500;
+  box-shadow: 0px 0px 14px -7px #1939f0;
+  background-image: linear-gradient(45deg, #322fff 0%, #199af0 51%, #2f66ff 100%);
+  cursor: pointer;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+}
 
+.button-84:hover {
+  background-position: right center;
+  /* change the direction of the change here */
+  color: #fff;
+  text-decoration: none;
+}
+
+.button-84:active {
+  transform: scale(0.95);
+}
 /*BOTON ELIMINAR*/
 .button-82 {
   margin: 2px;
