--- a/Views/Club/Index.cshtml
+++ b/Views/Club/Index.cshtml
@@ -61,6 +61,7 @@
                     
         </div>
     </div>
+    <p hidden id="RolJugadorPregunta">@User.IsInRole("Administrador")</p>
 @* </section> *@
 
 @section Scripts{
