--- a/Views/Categoria/Index.cshtml
+++ b/Views/Categoria/Index.cshtml
@@ -3,13 +3,13 @@
     ViewData["Title"] = "Categoria";
 }
 <div class="modal fade" id="ModalCategoria" tabindex="1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header fondom">
-                    <h5 class="modal-title letra " id="exampleModalLabel">Agregar Categoria</h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                </div>
-                <form id="files" method="post" enctype="multipart/form-data">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header fondom">
+                <h5 class="modal-title letra " id="exampleModalLabel">Agregar Categoria</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <form id="files" method="post" enctype="multipart/form-data">
                 <div class="modal-body fondom">
                     <input name="CategoriaId" type="hidden" id="CategoriaId" value="0" class="letra">
                     <div class="control-label">
@@ -19,32 +19,35 @@
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="button-8" role="button" data-bs-dismiss="modal">Cerrar</button>
-                        <button type="button" onclick="GuardarCategoria()" class="button-87" role="button">Guardar</button>
+                        <button type="button" onclick="GuardarCategoria()" class="button-87"
+                            role="button">Guardar</button>
                     </div>
                 </div>
-                </form>
-            </div>
+            </form>
         </div>
+    </div>
 </div>
 <h1 class="display-4 titulo bajar" style="font-family: Verdana, Geneva, Tahoma, sans-serif;">Categoria</h1>
 <div>
-        <div class="mb-2">
-            <button type="button" onclick="VaciarFormulario()" class="button-87" role="button" data-bs-toggle="modal"
-                data-bs-target="#ModalCategoria">
-                Nuevo
-            </button>
-        </div>
-<div> <table class="table table-dark table-bordered table-striped">
-        <thead>
-            <tr>
-                <th scope="col" class="lt">Categorias</th>
-
-                <th style="width: 22% !important;" scope="col" class="lt"></th>
-            </tr>
-        </thead>
-        <tbody id="tbody-categoria">
-        </tbody>
-    </table></div>
-@section Scripts{
-    <script src="~/js/categoria.js"></script>
-}
+    <div class="mb-2">
+        <button type="button" onclick="VaciarFormulario()" class="button-87" role="button" data-bs-toggle="modal"
+            data-bs-target="#ModalCategoria">
+            Nuevo
+        </button>
+    </div>
+    <div>
+        <table class="table table-dark table-bordered table-striped">
+            <thead>
+                <tr>
+                    <th scope="col" class="lt">Categorias</th>
+                    <th scope="col" class="lt"></th>
+                </tr>
+            </thead>
+            <tbody id="tbody-categoria">
+            </tbody>
+        </table>
+    </div>
+    <p hidden id="RolJugadorPregunta">@User.IsInRole("Administrador")</p>
+    @section Scripts {
+        <script src="~/js/categoria.js"></script>
+    }
