--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -1,5 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
+@using Microsoft.AspNetCore.Identity
+@inject SignInManager<IdentityUser> SignInManager
+@inject UserManager<IdentityUser> UserManager
+
 
 <head>
     <meta charset="utf-8" />
@@ -9,8 +13,9 @@
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/TesisPadel.styles.css" asp-append-version="true" />
     <script src="https://kit.fontawesome.com/808781cc1c.js" crossorigin="anonymous"></script>
-    <script src="~/js/sweetalert2.js"></script> 
+    <script src="~/js/sweetalert2.js"></script>
 </head>
+
 <body>
     <header class="header">
         <nav class="navbar navbar-expand-lg navbar navbar-dark bg-dark fixed-top">
@@ -29,8 +34,7 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="BTN nav-link" asp-area="" asp-controller="Ranking"
-                                asp-action="Index">Ranking</a>
+                            <a class="BTN nav-link" asp-area="" asp-controller="Ranking" asp-action="Index">Ranking</a>
                         </li>
                         <li class="nav-item">
                             <a class="BTN nav-link" asp-area="" asp-controller="Club" asp-action="Index">Clubes</a>
@@ -39,9 +43,14 @@
                             <a class="BTN nav-link" asp-area="" asp-controller="Categoria"
                                 asp-action="Index">Categoria</a>
                         </li>
-                        <li class="nav-item">
-                        <a class="BTN nav-link" asp-area="" asp-controller="Usuario" asp-action="IndexAdmi">Usuario</a>
-                        </li>
+                        @if (@User.IsInRole("Administrador"))
+                        {
+                            <li class="nav-item">
+                                <a class="BTN nav-link" asp-area="" asp-controller="Usuario"
+                                    asp-action="IndexAdmi">Usuario</a>
+                            </li>
+                        }
+
                     </ul>
                     <partial name="_LoginPartial" />
                 </div>
