--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -475,11 +475,6 @@ h6 span {
   box-shadow: 0 8px 24px 0 rgba(255,235,167,.2);
 }
 
-/* .fondoe:hover{
-background-color: rgb(155, 6, 6);
-box-shadow: 0 8px 24px 0 rgba(129, 11, 11, 0.87);
-}  */
-
 .logo {
   position: absolute;
   top: 30px;
@@ -1138,7 +1133,7 @@ img {
 .lt{
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   color:#ffffff; 
-  /* color: #ffffff; */
+  text-align: center;
   font-size: large;
 }
 .lt2{
