--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -24,37 +24,34 @@
                     <img src="~/css/img/APC.png" class="APC" alt="logo" width="150px">
                 </a>
             </div>
-            <div class="container-fluid">
-                @* Propiedades del logo (Boton de "inicío/Home"). *@
-
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse"
-                    aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-                    <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
-                            <a class="BTN nav-link" asp-area="" asp-controller="Ranking" asp-action="Index">Ranking</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="BTN nav-link" asp-area="" asp-controller="Club" asp-action="Index">Clubes</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="BTN nav-link" asp-area="" asp-controller="Categoria"
-                                asp-action="Index">Categoria</a>
-                        </li>
-                        @if (@User.IsInRole("Administrador"))
-                        {
-                            <li class="nav-item">
-                                <a class="BTN nav-link" asp-area="" asp-controller="Usuario"
-                                    asp-action="IndexAdmi">Usuario</a>
-                            </li>
-                        }
-
-                    </ul>
-                    <partial name="_LoginPartial" />
+            <label class="label_hamburguesa" for="menu_hamburguesa">
+                <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="list_icon"
+                    viewBox="0 0 16 16">
+                    <path fill-rule="evenodd"
+                        d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5" />
+                </svg>
+            </label>
+            <input class="menu_hamburguesa" type="checkbox" name="" id="menu_hamburguesa">
+                <ul class="navbar-nav ul_link">
+                    <li class="nav-item">
+                        <a class="btn2 nav-link" asp-area="" asp-controller="Ranking" asp-action="Index">Ranking</a>
+                    </li>
+                    <li class="nav-item li_icon">
+                        <a class="btn2 nav-link" asp-area="" asp-controller="Club" asp-action="Index">Clubes</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="btn2 nav-link links" asp-area="" asp-controller="Categoria"
+                        asp-action="Index">Categoria</a>
+                    </li>
+                @if (@User.IsInRole("Administrador"))
+                {
+                    <li class="nav-item">
+                        <a class="btn2 nav-link" asp-area="" asp-controller="Usuario" asp-action="IndexAdmi">Usuario</a>
+                    </li>
+                }
+                <partial name="_LoginPartial" />
                 </div>
-            </div>
+                </div>
         </nav>
     </header>
     <div class="container">
