--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -47,13 +47,6 @@ html {
   position: center;
 }
 
-.HTitulo {
-  color: #080bf3;
-  font-size: 3em;
-  padding-top: 0.2em;
-  margin-bottom: 2rem;
-  text-shadow: 2px 4px 1px rgb(67, 53, 9);
-}
 .titulo
 {
   color:#000000 !important;
@@ -77,63 +70,67 @@ html {
   font-weight: 600;
 }
 header{
-  display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: .5rem 2rem;
+  height: 90px;
+  width: auto;
 }
-/* .logo-header img{
-  width: 50px;
-} */
-.nav-menu ul{
+.navbar{
   display: flex;
+  height: 100%;
+  justify-content: space-between;
   align-items: center;
+  flex-wrap: wrap;
+  position: relative;
+  padding: 0 2rem;
 }
-.nav-menu li{
-  margin-right: 1rem;
+.menu_hamburguesa{
+  display: none;
 }
-@media (max-width:768px){
-  .checkbtn{
-      display: block;
-  }
-  .menu-icon{
-      display: block;
-      position: fixed;
-      top: 20px;
-      right: 20px;
-      cursor: pointer;
-  }
-  .nav-menu ul{
-      display: block;
-      position: fixed;
-      top:70px;
-      left:-100%;
-      background: #222;
-      width: 100%;
-      height: 100vh;
-      right: 0;
-  }
-  .nav-menu ul li{
-      padding: 2rem;
-      display: flex;
-      justify-content: center;
-      margin: 0;
-  }
-  .nav-menu ul li:last-child{
-      background: none;
-      padding: 1rem;
-  }
-  #check:checked ~ ul{
-      left: 0;
-      transition: all .25s;
-  }
+.list_icon{
+  color: white;
+  cursor: pointer;
 }
+.menu_hamburgesa:checked + .ul_link{
+  height: calc(100vh - 80px);
+}
+.ul_link{
+  width: 100%;
+  position: absolute;
+  top: 80px;
+  left: 0;
+  height: 0;
+  overflow: hidden;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  gap: 1rem;
+  transition: all .3s;
+}
+
+@media(min-width:768px){
+.label_hamburguesa{
+  display: none;
+}
+.ul_link{
+  position: static;
+  width: auto;
+  height: auto;
+  flex-direction: row;
+  gap: 1rem;
+}
+}
+.btn2 {
+font-family: Georgia, 'Times New Roman', Times, serif;
+}
+
+.btn2:hover {
+box-shadow: 0 8px 24px 0 rgb(114, 116, 122);
+} 
 .BTN {
   border-radius: 4px;
-  height: 44px;
+  height: 38px;
   font-size: 13px;
-  font-weight: 600;
-  text-transform: uppercase;
+  font-weight: 400;
   -webkit-transition: all 200ms linear;
   transition: all 200ms linear;
   padding: 0 30px;
@@ -153,22 +150,14 @@ header{
   text-align: center;
   border: none;
   background-color: #000000;
-  color: #102770;
-  box-shadow: 0 8px 24px 0 rgba(255, 235, 167, .2);
+  color: white;
   margin-left: 5px;
-}
-
-.BTN:active,
-.BTN:focus {
-  background-color: #102770;
-  color: #ffeba7 !important;
-  box-shadow: 0 8px 24px 0 rgba(16, 39, 112, .2);
 }
 
 .BTN:hover {
   background-color: #102770;
   color: #ffeba7;
-  box-shadow: 0 8px 24px 0 rgba(16, 39, 112, .2);
+  box-shadow: 0 8px 24px 0 rgba(32, 59, 145, 0.2);
 }
 
 /* LOGIN-REGISTER */
@@ -199,14 +188,6 @@ a {
 
 a:hover {
   text-decoration: none;
-}
-
-.link {
-  color: #c4c3ca;
-}
-
-.link:hover {
-  color: #ffeba7;
 }
 
 p {
