--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -12,18 +12,18 @@
   </div>
 
   <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
-  <div class="carousel-inner">
-    <div class="carousel-item active">
-      <img src="~/css/img/jugadores.jpg" class="d-block w-100" alt="...">
-    </div>
-    <div class="carousel-item">
-      <img src="~/css/img/jugadores2.jpg" class="d-block w-100" alt="...">
-    </div>
-    <div class="carousel-item">
-      <img src="~/css/img/jugadores3.jpg" class="d-block w-100" alt="...">
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img src="~/css/img/jugadores.jpg" class="d-block w-100" alt="...">
+      </div>
+      <div class="carousel-item">
+        <img src="~/css/img/jugadores2.jpg" class="d-block w-100" alt="...">
+      </div>
+      <div class="carousel-item">
+        <img src="~/css/img/jugadores3.jpg" class="d-block w-100" alt="...">
+      </div>
     </div>
   </div>
-</div>
 
   <hr class="hr">
 
@@ -35,150 +35,142 @@
   @* Seccion noticias*@
 
   <h4 style="margin-top: 2rem" class="titulo">Noticias de torneos</h4>
-  @if(@User.IsInRole("Administrador")){
+  @if (@User.IsInRole("Administrador"))
+  {
     <button onclick="ActivarEdicionNoticias();">Editar Noticias</button>
   }
-
-  <div class="containerN">
-    <div class="CardN" id="1">
-      <h4>Suma 14</h4>
-      <p>Torneo padel suma 14, cede club San Jorge de Brinkmann.</p>
-       <a href="#" class="BTN nav-link">Leer más</a>
-    </div>
-
-    <div class="CardN" id="2">
-      <img src="https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcTeGlBwiWyji712PeRHvWvv8c4rB8KyBUMfWb7b5jfRDfhIqQ3W" alt="">
-      <h4>Torneo 8°- 6°- 4°</h4>
-      <p>Torneo 8°, 6° y 4°, cede club San Jorge de Brinkmann.</p>
-       <a href="#" class="BTN nav-link">Leer más</a>
-    </div>
-
-    <div class="CardN" id="3">
-      <h4>Torneo 7°- 5°- +6°</h4>
-      <p>Torneo 7°, 5° y suma 6, cede A.C y D. La Paquita.</p>
-       <a href="#" class="BTN nav-link">Leer más</a>
-    </div>
-
-  </div>
 
   <hr class="hr">
 
   @* Seccion Clubes *@
   <h2 class="display-4 titulo">Sigue a los Clubes que conforman a <b>APC</b></h2>
- 
+
   <div class="Profes row col-lg-12 col-md-9" style="margin-left: 4%;">
     <div class="cards" style="width: 10rem;">
-     <a href="https://www.facebook.com/profile.php?id=100080628576874"><img class="card-img-top " src="~/css/img/paquita.png" alt="CardI image cap"></a> 
+      <a href="https://www.facebook.com/profile.php?id=100080628576874"><img class="card-img-top "
+          src="~/css/img/paquita.png" alt="CardI image cap"></a>
       <div class="card-body2">
-        <h5 class="card-title"  style="text-align: center;">La Paquita</h5>
+        <h5 class="card-title" style="text-align: center;">La Paquita</h5>
       </div>
     </div>
 
     <div class="cards" style="width: 10rem;">
-    <a href="https://www.facebook.com/profile.php?id=100064522097167"><img class="card-img-top" src="~/css/img/chipion_1.png" alt="Card-image-cap"></a>  
+      <a href="https://www.facebook.com/profile.php?id=100064522097167"><img class="card-img-top"
+          src="~/css/img/chipion_1.png" alt="Card-image-cap"></a>
       <div class="card-body2">
-        <h5 class="card-title"  style="text-align: center;">Chipion</h5>
+        <h5 class="card-title" style="text-align: center;">Chipion</h5>
       </div>
     </div>
 
     <div class="cards" style="width: 10rem;">
-     <a href="https://www.facebook.com/clubcentrosocial"><img class="card-img-top" style="background-image: 20%;" src="~/css/img/centro.png" alt="Card-image-cap"></a> 
+      <a href="https://www.facebook.com/clubcentrosocial"><img class="card-img-top" style="background-image: 20%;"
+          src="~/css/img/centro.png" alt="Card-image-cap"></a>
       <div class="card-body2">
         <h5 class="card-title" style="text-align: center;">Centro</h5>
       </div>
     </div>
 
     <div class="cards" style="width: 10rem;">
-    <a href="https://www.facebook.com/mundosanjorge/photos?locale=es_LA"><img class="card-img-top" src="~/css/img/san-jorge.png" alt="Card-image-cap"></a>  
+      <a href="https://www.facebook.com/mundosanjorge/photos?locale=es_LA"><img class="card-img-top"
+          src="~/css/img/san-jorge.png" alt="Card-image-cap"></a>
       <div class="card-body2">
         <h5 class="card-title" style="text-align: center;">San Jorge</h5>
       </div>
     </div>
 
     <div class="cards" style="width: 10rem;">
-     <a href="https://www.facebook.com/tiromorterosoficial"> <img class="card-img-top" src="~/css/img/tiro.png" alt="Card-image-cap"></a>
+      <a href="https://www.facebook.com/tiromorterosoficial"> <img class="card-img-top" src="~/css/img/tiro.png"
+          alt="Card-image-cap"></a>
       <div class="card-body2">
         <h5 class="card-title" style="text-align: center;">Tiro Federal</h5>
       </div>
     </div>
-   
+
     <div class="cards" style="width: 10rem; margin-top: 2%">
-    <a href="https://www.facebook.com/elnuevedemorteros"><img class="card-img-top" src="~/css/img/9-de-morteros.png" alt="Card-image-cap"></a>  
+      <a href="https://www.facebook.com/elnuevedemorteros"><img class="card-img-top" src="~/css/img/9-de-morteros.png"
+          alt="Card-image-cap"></a>
       <div class="card-body2">
         <h5 class="card-title" style="text-align: center;">9 de morteros</h5>
       </div>
     </div>
-    
+
     <div class="cards" style="width: 10rem; margin-top: 2%">
-    <a href="https://www.facebook.com/profile.php?id=100066839164805"><img class="card-img-top" src="~/css/img/suardi.png" alt="Card-image-cap"></a>  
+      <a href="https://www.facebook.com/profile.php?id=100066839164805"><img class="card-img-top"
+          src="~/css/img/suardi.png" alt="Card-image-cap"></a>
       <div class="card-body2">
         <h5 class="card-title" style="text-align: center;">Suardi</h5>
       </div>
-    </div> 
-    
+    </div>
+
     <div class="cards" style="width: 10rem; margin-top: 2%">
-    <a href="https://www.facebook.com/clubatletico.libertadtrinidad.54"><img class="card-img-top" src="~/css/img/villa-trinidad.png" alt="Card-image-cap"></a>  
+      <a href="https://www.facebook.com/clubatletico.libertadtrinidad.54"><img class="card-img-top"
+          src="~/css/img/villa-trinidad.png" alt="Card-image-cap"></a>
       <div class="card-body2">
-        <h5 class="card-title"  style="text-align: center;">Villa Trinidad</h5>
+        <h5 class="card-title" style="text-align: center;">Villa Trinidad</h5>
       </div>
     </div>
-  <div class="cards" style="width: 10rem;margin-top: 2%">
-    <a href="https://www.facebook.com/portena.deportiva"><img class="card-img-top" src="~/css/img/porteña.png" alt="Card-image-cap"></a>  
+    <div class="cards" style="width: 10rem;margin-top: 2%">
+      <a href="https://www.facebook.com/portena.deportiva"><img class="card-img-top" src="~/css/img/porteña.png"
+          alt="Card-image-cap"></a>
       <div class="card-body2">
-        <h5 class="card-title"  style="text-align: center;">Porteña</h5>
+        <h5 class="card-title" style="text-align: center;">Porteña</h5>
       </div>
     </div>
 
 
-  <hr class="hr">
+    <hr class="hr">
 
-@* CAMBIAR PREGUNTAS *@
-  @* SECCION PREGUNTAS FRECUENTES *@
-  <h1 class="preguntas titulo">Preguntas frecuentes</h1>
-
-  <div class="row">
-    <div class="Card col-lg-5">
-      <div class="Card1">
-        <div class="card-body">
-          <h4 style="color: white;">¿Cómo empezar a jugar al padel?</h4>
-          <p style="color: white;">Para empezar, necesitarás unirse a nuestro club y reservar una pista. ¡También ofrecemos clases
-            para
-            principiantes!</p>
-        </div>
-      </div>
-    </div>
-
-    <div class="Card col-lg-5">
-      <div class="Card1">
-        <div class="card-body">
-          <h4 style="color: white;">¿Necesito comprar mi propia raqueta?</h4>
-          <p style="color: white;">Sí, pero ofrecemos una tienda donde podrás comprar todo lo necesario para comenzar a jugar</p>
-        </div>
-      </div>
-    </div>
+    @* CAMBIAR PREGUNTAS *@
+    @* SECCION PREGUNTAS FRECUENTES *@
+    <h1 class="preguntas titulo">Preguntas frecuentes</h1>
 
     <div class="row">
       <div class="Card col-lg-5">
-        <div class="Card1" >
+        <div class="Card1">
           <div class="card-body">
-            <h4 style="color: white;">¿Ofrecen entrenamiento para principiantes?</h4>
-            <p style="color: white;">Sí, tenemos entrenadores expertos listos para ayudarte a mejorar tus habilidades desde cero</p>
+            <h4 style="color: white;">¿Cómo empezar a jugar al padel?</h4>
+            <p style="color: white;">Para empezar, necesitarás unirse a nuestro club y reservar una pista. ¡También
+              ofrecemos clases
+              para
+              principiantes!</p>
           </div>
         </div>
       </div>
 
-      <div class="Cards2 col-lg-5" style="height: 70%;">
+      <div class="Card col-lg-5">
         <div class="Card1">
           <div class="card-body">
-            <h4 style="color: white;">¿Cómo me uno a un equipo?</h4>
-            <p style="color: white;">Simplemente regístrate y nuestro equipo te emparejará con jugadores de habilidades similares</p>
+            <h4 style="color: white;">¿Necesito comprar mi propia raqueta?</h4>
+            <p style="color: white;">Sí, pero ofrecemos una tienda donde podrás comprar todo lo necesario para comenzar
+              a jugar</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="Card col-lg-5">
+          <div class="Card1">
+            <div class="card-body">
+              <h4 style="color: white;">¿Ofrecen entrenamiento para principiantes?</h4>
+              <p style="color: white;">Sí, tenemos entrenadores expertos listos para ayudarte a mejorar tus habilidades
+                desde cero</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="Cards2 col-lg-5" style="height: 70%;">
+          <div class="Card1">
+            <div class="card-body">
+              <h4 style="color: white;">¿Cómo me uno a un equipo?</h4>
+              <p style="color: white;">Simplemente regístrate y nuestro equipo te emparejará con jugadores de
+                habilidades similares</p>
+            </div>
           </div>
         </div>
       </div>
     </div>
-  </div> 
 
-@* <div>
+    @* <div>
   <footer class="">
     <div class="container">
       <div class="row" style="padding-left: 15%;">
@@ -194,7 +186,7 @@
   </footer>
 </div> *@
 
-@section Scripts {
-        <script src="~/js/Noticias.js"></script>
+    @section Scripts {
+      <script src="~/js/Noticias.js"></script>
     }
 </body>
